# valence-v2

./: .env.example  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  Dockerfile  FUSION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  valence-engine.example.toml
cli/: .gitignore  README.md  config.example.toml  go.mod  go.sum  main.go
cli/client/: client.go  types.go
cli/cmd/: federation.go  health.go  maintenance.go  node.go  root.go  session.go  stats.go  triple.go  trust.go  version.go
cli/config/: config.go
docs/: api-design.md  bricks-architecture.md  mcp-integration.md  postgresql-backend.md  requirements.md  satellite-repos.md  v1-api-audit.md  v1-architecture.md
docs/adr/: 002-storage-engine.md  003-rust-technology-stack.md
engine/: Cargo.toml
engine/migrations/: 001_initial.sql
engine/src/: config.rs  content_id.rs  engine.rs  error.rs  lib.rs  main.rs  predicates.rs  supersession.rs
engine/src/api/: mod.rs  mod.rs.bak  resilience_endpoints.rs  types.rs
engine/src/budget/: bounded.rs  mod.rs  tiered.rs
engine/src/context/: assembler.rs  mod.rs  working_set.rs
engine/src/embeddings/: hnsw.rs  memory.rs  mmap_store.rs  mod.rs  node2vec.rs  spectral.rs  spring.rs  strategy_selector.rs
engine/src/federation/: config.rs  manager.rs  mod.rs  peer.rs  protocol.rs  sync.rs  transport.rs
engine/src/graph/: algorithms.rs  confidence.rs  mod.rs  view.rs
engine/src/identity/: keypair.rs  mod.rs
engine/src/inference/: blend_tuner.rs  feedback.rs  mod.rs  weight_adjuster.rs
engine/src/lifecycle/: bounds.rs  decay.rs  mod.rs
engine/src/mcp/: mod.rs  tools.rs
engine/src/models/: mod.rs  source.rs  triple.rs
engine/src/query/: combined.rs  fusion.rs  mod.rs
engine/src/resilience/: README.md  degradation.rs  fallback.rs  mod.rs  retrieval.rs
engine/src/stigmergy/: access_tracker.rs  co_retrieval.rs  mod.rs
engine/src/storage/: memory.rs  mod.rs  postgres.rs  sled_store.rs  traits.rs
engine/src/tiered_store/: README.md  config.rs  mod.rs  store.rs
engine/src/vkb/: README.md  integration.md  memory.rs  mod.rs  models.rs  patterns.rs  postgres.rs  store.rs
engine/tests/: cold_engine_test.rs  e2e_pipeline.rs  embeddings_test.rs  integration.rs  models_test.rs  resilience_integration.rs  stigmergy_integration.rs
plugin/: INTEGRATION_SUMMARY.md  MIGRATION.md  openclaw.plugin.json
scripts/: run.sh  test-mcp.sh
src/valence/: __init__.py  client.py  models.py
tools/migrate-v1/: Cargo.toml  README.md
tools/migrate-v1/src/: main.rs
