[package]
name = "valence-engine"
version = "0.1.0"
edition = "2021"
description = "Triple-based knowledge substrate with topology-derived embeddings"
license = "MIT"

[[bin]]
name = "valence-engine"
path = "src/main.rs"

[dependencies]
# In-memory graph algorithms  
petgraph = "0.7"
# HTTP server
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Linear algebra for spectral embeddings
faer = "0.20"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# UUID for triple IDs
uuid = { version = "1", features = ["v4", "serde"] }
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }
# PostgreSQL support
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }
# MCP (Model Context Protocol) support
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "1.2"  # Required for JsonSchema derives
# Random number generation for Node2Vec
rand = "0.8"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
postgres = ["sqlx"]
