[package]
name = "valence-engine"
version = "0.1.0"
edition = "2021"
description = "Triple-based knowledge substrate with topology-derived embeddings"
license = "MIT"

[[bin]]
name = "valence-engine"
path = "src/main.rs"

[dependencies]
# In-memory graph algorithms  
petgraph = "0.7"
# HTTP server
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Linear algebra for spectral embeddings
faer = "0.20"
# Error handling
thiserror = "2"
anyhow = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# UUID for triple IDs
uuid = { version = "1", features = ["v4", "serde"] }
# Content-addressable hashing for deterministic IDs
blake3 = "1"
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }
# Configuration (TOML)
toml = "0.8"
# PostgreSQL support
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"], optional = true }
# MCP (Model Context Protocol) support
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "1.2"  # Required for JsonSchema derives
# Random number generation for Node2Vec
rand = "0.8"
log = "0.4"
# Identity / cryptography
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
# Collections
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"
# P2P federation (feature-gated)
libp2p = { version = "0.54", features = ["tokio", "gossipsub", "kad", "mdns", "noise", "yamux", "tcp", "dns", "identify", "request-response", "macros"], optional = true }
futures = { version = "0.3", optional = true }
bloomfilter = { version = "1", optional = true }
# Embedded storage (feature-gated)
sled = { version = "0.34", optional = true }
bincode = { version = "1", optional = true }
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }

[features]
default = []
postgres = ["sqlx"]
federation = ["libp2p", "futures", "bloomfilter"]
embedded = ["sled", "bincode", "memmap2"]
