[package]
name = "migrate-v1"
version = "0.1.0"
edition = "2021"
description = "Migrate Valence v1 beliefs to v2 triples"

[[bin]]
name = "migrate-v1"
path = "src/main.rs"

[dependencies]
# PostgreSQL support for v1 database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
# HTTP client for v2 API
reqwest = { version = "0.12", features = ["json"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# CLI parsing
clap = { version = "4", features = ["derive", "env"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Error handling
anyhow = "1"
thiserror = "2"
# UUID support
uuid = { version = "1", features = ["v4", "serde"] }
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
